# spdm

./: .editorconfig  .gitignore  README.md  environment.yml  pyproject.toml
configs/: common.py  custom_Crossformer.py  custom_DLinear.py  custom_ManiMamba.py  custom_PatchTST.py  custom_S_Mamba.py  custom_TimesNet.py  model_parser_dict.py
output/ablation/: manimamba-ablation_v4.xlsx  update_ablation_v4.py
output/case_study/: case_study.ipynb  collect_results.sh
output/efficiency/: efficiency_plot.ipynb  efficiency_results_ECL.txt  efficiency_results_ETTm1.txt  efficiency_results_Weather.txt
output/efficiency/manimamba_results/: ManiMamba_ECL_pl336_20260526_080430.json  ManiMamba_ETTm1_pl96_20260526_024924.json  ManiMamba_Weather_pl96_20260526_042132.json
output/exp_plot/: geometry_plots.ipynb
output/hyperparam/: sensitivity_plot.ipynb  sensitivity_results.xlsx
output/lookback/: BiMamba4TS.txt  Informer.txt  Informer_M.txt  ManiMamba.txt  Reformer.txt  Reformer_M.txt  S_Mamba.txt  Transformer.txt  Transformer_M.txt  iTransformer.txt  interPDN.txt  lookback_analysis.ipynb
output/optuna/: ManiMamba_ECL_pl192_best_params.json  ManiMamba_ECL_pl336_best_params.json  ManiMamba_ECL_pl720_best_params.json  ManiMamba_ECL_pl96_best_params.json  ManiMamba_ETTh1_pl192_best_params.json  ManiMamba_ETTh1_pl336_best_params.json  ManiMamba_ETTh1_pl720_best_params.json  ManiMamba_ETTh1_pl96_best_params.json  ManiMamba_ETTh2_pl192_best_params.json  ManiMamba_ETTh2_pl336_best_params.json  ManiMamba_ETTh2_pl720_best_params.json  ManiMamba_ETTh2_pl96_best_params.json  ManiMamba_ETTm1_pl192_best_params.json  ManiMamba_ETTm1_pl336_best_params.json  ManiMamba_ETTm1_pl720_best_params.json  ManiMamba_ETTm1_pl96_best_params.json  ManiMamba_ETTm2_pl192_best_params.json  ManiMamba_ETTm2_pl336_best_params.json  ManiMamba_ETTm2_pl720_best_params.json  ManiMamba_ETTm2_pl96_best_params.json  ManiMamba_Exchange_pl192_best_params.json  ManiMamba_Exchange_pl336_best_params.json  ManiMamba_Exchange_pl720_best_params.json  ManiMamba_Exchange_pl96_best_params.json  ManiMamba_PEMS03_pl12_best_params.json  ManiMamba_PEMS03_pl24_best_params.json  ManiMamba_PEMS03_pl48_best_params.json  ManiMamba_PEMS03_pl96_best_params.json  ManiMamba_PEMS04_pl12_best_params.json  ManiMamba_PEMS04_pl24_best_params.json  ManiMamba_PEMS04_pl48_best_params.json  ManiMamba_PEMS04_pl96_best_params.json  ManiMamba_PEMS07_pl12_best_params.json  ManiMamba_PEMS07_pl24_best_params.json  ManiMamba_PEMS07_pl48_best_params.json  ManiMamba_PEMS07_pl96_best_params.json  ManiMamba_PEMS08_pl12_best_params.json  ManiMamba_PEMS08_pl24_best_params.json  ManiMamba_PEMS08_pl48_best_params.json  ManiMamba_PEMS08_pl96_best_params.json  (+16 more)
output/robustness/: ETTm2_robustness.txt  robustness.ipynb
scripts/: clean.sh  convert_data_to_pt.py  run.py  update_excel_from_optuna.py
scripts/ablation/: ablation_common.sh  run_all_ablation.sh  run_baseline.sh
scripts/ablation/V4_GeoSmoothReg/: run_V4_GeoSmoothReg.sh
scripts/ablation/V4_LinearInterp/: run_V4_LinearInterp.sh
scripts/ablation/V4_NoBC/: run_V4_NoBC.sh
scripts/ablation/V4_TanhAlpha/: run_V4_TanhAlpha.sh
scripts/ablation/V4_WDt/: run_V4_WDt.sh
scripts/case_study/: run_case_study.sh
scripts/case_study/ETTm2/: ManiMamba.sh  PatchTST.sh  S-Mamba.sh  iTransformer.sh
scripts/efficiency/: 1_ETTm1.sh  2_Weather_96.sh  3_PEMS04_12.sh  4_ECL_336.sh  efficiency_defaults.yaml  run_efficiency.py
scripts/efficiency/legacy/: Exp1_PEMS08.sh  Exp2_ECL.sh  Exp3_Weather.sh  Exp4_ETTm1.sh  Exp_BiMamba4TS_interPDN.sh  run_efficiency_legacy.py
scripts/explanation/: run_explain_ETTm2.sh
scripts/hpo/: gpu_budget_reset.py  hpo_batch.sh  hpo_clean.sh  hpo_dashboard.sh  hpo_dump.py  hpo_parallel.sh  hpo_tune.py
scripts/hyperparam/: launch.sh  run_sensitivity.py
scripts/increasing_lookback/: lookback_common.sh  run-lookback.sh
scripts/increasing_lookback/ECL/: ManiMamba.sh
scripts/increasing_lookback/ETTm1/: ManiMamba.sh
scripts/increasing_lookback/PEMS08/: ManiMamba.sh
scripts/increasing_lookback/Weather/: ManiMamba.sh
scripts/multivariate_forecasting/ECL/: ManiMamba.sh
scripts/multivariate_forecasting/ETT/: ManiMamba_ETTh1.sh  ManiMamba_ETTh2.sh  ManiMamba_ETTm1.sh  ManiMamba_ETTm2.sh
scripts/multivariate_forecasting/Exchange/: ManiMamba.sh
scripts/multivariate_forecasting/PEMS/: ManiMamba_PEMS03.sh  ManiMamba_PEMS04.sh  ManiMamba_PEMS07.sh  ManiMamba_PEMS08.sh
scripts/multivariate_forecasting/SolarEnergy/: ManiMamba.sh
scripts/multivariate_forecasting/Traffic/: ManiMamba.sh
scripts/multivariate_forecasting/Weather/: ManiMamba.sh
scripts/multivariate_forecasting/illness/: Autoformer.sh  Crossformer.sh  DLinear.sh  Informer.sh  ManiMamba.sh  PatchTST.sh  S_Mamba.sh  TiDE.sh  TimesNet.sh  iTransformer.sh
scripts/robustness/: ETTm2.sh  run-robustness.sh
src/data_provider/: data_factory.py  data_loader.py
src/experiments/: exp_basic.py  exp_long_term_forecasting.py  exp_long_term_forecasting_partial.py
src/hpo/: gpu_budget.py  objective.py  search_space.py  study_manager.py  suggest_overrides.py
src/layers/: AutoCorrelation.py  BiMamba4TS_Embed.py  BiMamba4TS_layers.py  Embed.py  GeometryMamba.py  GeometryModulatedMamba.py  Mamba_EncDec.py  ManiMambaEncoderLayer.py  PatchTST_layers.py  SPDTangentProjection.py  SelfAttention_Family.py  __init__.py  decomp.py  dema.py  ema.py  network.py  revin_interpdn.py
src/model/: Autoformer.py  BiMamba4TS.py  Crossformer.py  DLinear.py  Flashformer.py  Flowformer.py  Informer.py  ManiMamba.py  PatchTST.py  Reformer.py  S_Mamba.py  TiDE.py  TimesNet.py  Transformer.py  __init__.py  iTransformer.py  interPDN.py
src/utils/: checkpoint.py  cuda_accel.py  metrics.py  scheduler.py  tools.py  tools_bimamba.py
